[package]
name = "cargo-pgoe"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "cargo-pgoe"
path = "src/main.rs"

[lib]
name = "cargo-pgoe"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
which = "4.2"
clap = { version = "3.2", features = ["derive"] }
log = "0.4"
env_logger = "0.9.0"
colored = "2.0.0"
cargo_metadata = "0.15.0"
humansize = "1.1.1"
semver = "1.0.12"
tempfile = "3.3.0"
regex = "1.6.0"
once_cell = "1.13.0"
rustc-demangle = "0.1"
walkdir = "2.3.2"
shellwords = "1.1.0"
blake3 = "1.3.1"
